--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
