--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "uri-js": "^4.4.1",
     "web-vitals": "^2.1.4"
