--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
-    "color-thief-react": "^2.1.0",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
